--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>authserver</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>authserver</name>
-	<description>Demo project for Spring Boot</description>
+	<description>Authorization Server</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
@@ -38,6 +38,14 @@
       <groupId>org.postgresql</groupId>
       <artifactId>postgresql</artifactId>
       <scope>runtime</scope>
+    </dependency>
+		<dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-oauth2-client</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-thymeleaf</artifactId>
     </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
