--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,17 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialec
 
 spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.format_sql=true
+
+spring.security.oauth2.client.registration.google-idp.provider=google
+spring.security.oauth2.client.registration.google-idp.client-id=${GOOGLE_CLIENT_ID:741544063507-q08mdpr6rf7q7e93mc47he6ug68ur6jr.apps.googleusercontent.com}
+spring.security.oauth2.client.registration.google-idp.client-secret=${GOOGLE_CLIENT_SECRET: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}
+spring.security.oauth2.client.registration.google-idp.scope=openid, https://www.googleapis.com/auth/userinfo.profile, https://www.googleapis.com/auth/userinfo.email
+spring.security.oauth2.client.registration.google-idp.client-name=ashes-security
+
+#spring.security.oauth2.client.registration.github-idp.provider=github
+#spring.security.oauth2.client.registration.github-idp.client-id=${GITHUB_CLIENT_ID:github-client-id}
+#spring.security.oauth2.client.registration.github-idp.client-secret=${GITHUB_CLIENT_SECRET:github-client-secret}
+#spring.security.oauth2.client.registration.github-idp.scope=user:email, read:user
+#spring.security.oauth2.client.registration.github-idp.client-name=Sign in with GitHub
+spring.security.oauth2.client.provider.google.user-name-attribute=email
+#spring.security.oauth2.client.provider.github.user-name-attribute=login
